Fixed alignment issue with about me section

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -123,7 +123,7 @@ html {
   background: #f7f7f7; }
 
 .contact-section {
-  min-height: 70vh;
+  min-height: 60vh;
   padding-top: 150px;
   text-align: center;
   background: black; }
